[gd_scene load_steps=4 format=3 uid="uid://biyhe8708ekvf"]

[ext_resource type="Texture2D" uid="uid://du1wurh5xv8jh" path="res://assets/predicted_attack.png" id="1_5phnx"]
[ext_resource type="Script" path="res://scripts/santa_attack.gd" id="1_suhpf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kd6w"]
size = Vector2(16, 208)

[node name="santa_attack" type="Node2D"]
script = ExtResource("1_suhpf")

[node name="attack_sprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.517647)
position = Vector2(0, 96)
texture = ExtResource("1_5phnx")

[node name="prepare_attack_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="destroy_attack_timer" type="Timer" parent="."]
one_shot = true

[node name="attack_area" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(0, 96)
shape = SubResource("RectangleShape2D_5kd6w")
debug_color = Color(0.886275, 0.258824, 0.533333, 0.168627)

[connection signal="timeout" from="prepare_attack_timer" to="." method="_on_prepare_attack_timer_timeout"]
[connection signal="timeout" from="destroy_attack_timer" to="." method="_on_destroy_attack_timer_timeout"]
